cmd/bosc/tests/owned_scalar_rebind_use_source_err_test.bos
package main

import "fmt"

fn describe(i i64) {
	fmt.print("v %d\n", i)
}

fn main() {
	handle owned i64 := 10
	handle2 owned i64 := handle // handle moved into handle2
	describe(handle)            // error: handle was moved
	dispose(handle2)
}
